# parliament_debate

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  ROLE_KEYS.md  assignment.py  config.py  debate.py  graph.py  models.py  nodes.py  output.py  prompts.py  pyproject.toml  requirements.txt  test_models.py
configs/: .env.agile  .env.default  .env.endless  .env.max-quality  .env.token-saver
docs/: architecture.md  config-reference.md  roles-and-prompts.md  state-and-flow.md
